--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,9 @@ dist.jar=${dist.dir}/mysoulmates.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.gson-2.8.2.jar=C:\\Users\\COMPUTER\\Documents\\NetBeansProjects\\Library-Assistant-master\\libs\\gson-2.8.2.jar
+file.reference.mail.jar=C:\\Users\\COMPUTER\\Documents\\NetBeansProjects\\Library-Assistant-master\\libs\\mail.jar
+file.reference.stripe-java-5.31.0.jar=C:\\Users\\COMPUTER\\Documents\\NetBeansProjects\\Library-Assistant-master\\libs\\stripe-java-5.31.0.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -36,7 +39,10 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.jfonix.classpath}
+    ${libs.jfonix.classpath}:\
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.stripe-java-5.31.0.jar}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
