--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -91,7 +91,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=mysoulmates.Mysoulmates
+javafx.main.class=mysoulmates.Main.Mysoulmates
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
