--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/mysoulmates.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.activation.jar=C:\\Users\\COMPUTER\\Documents\\NetBeansProjects\\Library-Assistant-master\\libs\\activation.jar
 file.reference.gson-2.8.2.jar=C:\\Users\\COMPUTER\\Documents\\NetBeansProjects\\Library-Assistant-master\\libs\\gson-2.8.2.jar
 file.reference.mail.jar=C:\\Users\\COMPUTER\\Documents\\NetBeansProjects\\Library-Assistant-master\\libs\\mail.jar
 file.reference.stripe-java-5.31.0.jar=C:\\Users\\COMPUTER\\Documents\\NetBeansProjects\\Library-Assistant-master\\libs\\stripe-java-5.31.0.jar
@@ -42,7 +43,8 @@ javac.classpath=\
     ${libs.jfonix.classpath}:\
     ${file.reference.gson-2.8.2.jar}:\
     ${file.reference.stripe-java-5.31.0.jar}:\
-    ${file.reference.mail.jar}
+    ${file.reference.mail.jar}:\
+    ${file.reference.activation.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
